--- a/passport.html
+++ b/passport.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Passport Photo Generator</title>
+  <title>Lifeme - Easy Work Hacks by Mono</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -59,7 +59,7 @@
       color: #333333;
       padding: 20px 15px;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
     .form-title {
       font-size: 24px;
@@ -112,11 +112,10 @@
 
   <!-- Navbar Section -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand mx-auto" href="#">Passport Photo Generator</a>
+    <a class="navbar-brand mx-auto" href="#">Lifeme - Easy Work Hacks</a>
   </nav>
 
-<section>
-
+<section class="mt-5">
   <!-- Scrollable Content Container -->
   <div class="scrollable-content">
     <div class="container">
@@ -131,7 +130,7 @@
         </div>
 
         <!-- Image Preview -->
-        <div id="cropContainer" style="display: none;">
+        <div class="text-center" id="cropContainer" style="display: none;">
           <img id="imageToCrop" src="" alt="To Crop">
           <button type="button" class="btn btn-secondary mt-3" onclick="applyCrop()">Apply Crop</button>
         </div>
@@ -153,7 +152,7 @@
 </section>
   <!-- Footer Section -->
   <footer class="footer">
-    <div class="footer-text">© 2024 Passport Photo Generator. All Rights Reserved.</div>
+    <div class="footer-text">© 2024 Lifeme. All Rights Reserved. Your trusted source for easy work hacks.</div>
     <div class="footer-links">
       <a href="#" target="_blank">Facebook</a> |
       <a href="#" target="_blank">Instagram</a> |
@@ -223,7 +222,7 @@
 
       // Adding signature
       doc.setFontSize(10);
-      doc.text("© 2024 Passport Photo Generator. All Rights Reserved.", docWidth / 2, docHeight - 10, null, null, 'center');
+      doc.text("© 2024 Lifeme by Mono. Your trusted source for easy work hacks.", docWidth / 2, docHeight - 10, null, null, 'center');
 
       const fileName = document.getElementById("nameField").value || "passport_photos";
       doc.save(`${fileName}.pdf`);
